creating controller and conection between java and RDS